RESOLVED FIXED 58956
WebGL context drawing buffer may not be cleared if FBO bound
https://bugs.webkit.org/show_bug.cgi?id=58956
Summary WebGL context drawing buffer may not be cleared if FBO bound
John Bauman
Reported 2011-04-19 18:17:40 PDT
Currently, we don't clear the drawing buffer after compositing while an FBO is bound to the context. This is normally ok, as the drawing buffer will be cleared when it's bound and something happens to it, but it will cause any texImage2D/drawImage/toDataURL from the canvas to see the old contents.
Attachments
Patch (5.31 KB, patch)
2011-04-19 21:24 PDT, John Bauman
no flags
Patch (5.28 KB, patch)
2011-04-21 16:42 PDT, John Bauman
no flags
John Bauman
Comment 1 2011-04-19 21:24:07 PDT
Zhenyao Mo
Comment 2 2011-04-20 10:40:27 PDT
Comment on attachment 90302 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=90302&action=review Looks good. > Source/WebCore/html/canvas/WebGLRenderingContext.h:454 > + bool m_depthMask; Please use GC3Dboolean instead of bool.
Kenneth Russell
Comment 3 2011-04-20 13:34:47 PDT
Comment on attachment 90302 [details] Patch Looks good overall. Could you please submit a revised patch addressing Mo's feedback?
John Bauman
Comment 4 2011-04-21 16:42:29 PDT
Kenneth Russell
Comment 5 2011-04-21 16:45:39 PDT
Comment on attachment 90632 [details] Patch Looks good.
WebKit Commit Bot
Comment 6 2011-04-21 23:07:11 PDT
The commit-queue encountered the following flaky tests while processing attachment 90632 [details]: http/tests/xmlhttprequest/encode-request-url-2.html bug 51765 (author: ap@webkit.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7 2011-04-21 23:08:38 PDT
Comment on attachment 90632 [details] Patch Clearing flags on attachment: 90632 Committed r84602: <http://trac.webkit.org/changeset/84602>
WebKit Commit Bot
Comment 8 2011-04-21 23:08:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.